--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,7 +6,7 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-az400-eshoponweb-subhra
-  LOCATION: Australia Southeast
+  LOCATION: australiasoutheast	
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: 26be4d48-99e7-4b5d-a46a-c009f38a07a0
   WEBAPP-NAME: az400-webapp-testghactions
